2022-05-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (17 may 2022).
	* bibtex-4.c, bibtex.h:
	Fix a bug of text.prefix$ and text.length$ in bibtexu.
	* tests/testsubstr[au].bib, substr[au].bbl, txtprfx[au].bbl:
	Update tests.

2022-05-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (8 may 2022).
	* bibtex-2.c:
	Set LEGAL_ID_CHAR to id_class of 8bit characters.
	* Makefile.am, tests/bibtex[8u].test,
	tests/bibtex8-char.test, tests/bibtexu-sort.test,
	tests/test{case,char,name,period,substr,txtprfx,width,iscjk}.bst,
	tests/case[au].bbl, tests/chara.bbl, tests/name[au].bbl,
	tests/substra.bbl, tests/txtprfxa.bbl, tests/yannis.bbl,
	tests/exampl.bbl, tests/ltnbib.bib, tests/mlgbib.bib,
	tests/testcase[au].bib, tests/yannis.bib:
	Update tests.

2022-05-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version.h:
	Bump version to 4.00 (2 may 2022).
	* bibtex.[ch], gblvars.h:
	Accept max_print_line variable in kpathsea.
	We can define max_print_line.bibtex8 or max_print_line.bibtexu
	in texmf.cnf.
	* tests/bibtex[8u]-char.test, tests/name[au].bbl:
	Update tests.

2022-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, version.h:
	Bump version to 4.00 (29 apr 2022).

	Both BibTeX8 and BibTeXu::
	* bibtex.[ch], utils.[ch], datatype.h, gblprocs.h, gblvars.h, sysdep.h,
	version.h, bibtex-[1234].c, HISTORY:
	Remove keywords for RCS from headers since we do not use RCS anymore.
	* bibtex-[234].c, bibtex.h, gblprocs.h, gblvars.h:
	Add operators bitwise AND "&" and bitwise OR "|" to built-in functions
	in style files.
	* bibtex8.1, bibtexu.1, HISTORY: Update documents.
	* Makefile.am, tests/bibtex[8u]-char.test,
	tests/testcase.bst tests/testchar.bst,
	tests/period[au].bbl, tests/testperiod[au].bib, tests/testperiod.bst,
	tests/substr[au].bbl, tests/testsubstr[au].bib, tests/testsubstr.bst,
	tests/txtprfx[au].bbl, tests/testtxtprfx.bst,
	tests/width[au].bbl, tests/testwidth[au].bib, tests/testwidth.bst,