@@ -1079,9 +1079,9 @@ void parse_cmd_line (int argc, char **argv)
                 break;
 
             case 'v':       /**************** -v, --version ************/
-                FPRINTF (TERM_OUT, "%s\n", BANNER);
+                FPRINTF (TERM_OUT, "%s-x%s (%s)\n", BANNER, EXT_VERSION, TL_VERSION);
                 FPRINTF (TERM_OUT, "Implementation:  %s\n", IMPLEMENTATION);
-                FPRINTF (TERM_OUT, "Release version: %s (%s)\n", VERSION, TL_VERSION);
+                FPRINTF (TERM_OUT, "Release version: %s\n", VERSION);
 #ifdef UTF_8
                 {
                     UVersionInfo icuVersion;
